--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,13 @@ body {
   padding: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  background-color: azure;
+  background-color: #202020;
+  color: white;
+}
+
+a{
+  text-decoration: none;
+  color: white;
 }
 
 header {
@@ -18,16 +24,58 @@ ul {
 }
 
 ul > li {
-  color: white;
   font-size: large;
   font-weight: 500;
   list-style: none;
 }
 
+.info {
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.info span{
+  font-weight: normal;
+}
+
+h1,
+h2 {
+  text-align: center;
+}
+
+.img-bio {
+  margin-top: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.article{
+  width: 50%;
+  padding: 10px;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+  border-radius: 500px;
+}
+
 section {
   margin: 0 16px;
-  display: flex;
   gap: 64px;
+  background-color: #3a3838;
+  border-radius: 30px;
+  padding: 40px;
+}
+
+.section-1 {
+  display: flex;
+}
+
+.bio-info {
+  width: 600px;
+  text-align: justify;
 }
 
 .row1 {
